--- a/SelinVirtualAgent.html
+++ b/SelinVirtualAgent.html
@@ -30,7 +30,7 @@
   <!-- اسکریپت D-ID با اتصال به div بالا -->
   <script type="module"
     src="https://agent.d-id.com/v2/index.js"
-    data-mode="embedded"
+    data-mode="full"
     data-client-key="Z29vZ2xlLW9hdXRoMnwxMTc2NDQxNDgzODkzNDQxNzIxNjc6RExqZ1huS0RqamxKOFNuV1pycmNJ"
     data-agent-id="v2_agt_s2zt8n2S"
     data-name="did-agent"
@@ -40,4 +40,5 @@
 
 </body>
 </html>
+
 
