--- a/emails_dashboard.html
+++ b/emails_dashboard.html
@@ -67,7 +67,7 @@
   <div class="container">
     <aside>
       <h2>📧 مدیریت ایمیل‌ها</h2>
-      <button onclick="loadPage('groups.html')">📂 دسته‌بندی ایمیل‌ها</button>
+      <button onclick="loadPage('email_groups.html')">📂 دسته‌بندی ایمیل‌ها</button>
       <button onclick="loadPage('sources.html')">📋 منابع ایمیل‌ها</button>
       <button onclick="loadPage('bulk_send.html')">📤 ارسال ایمیل دسته‌ای</button>
       <button onclick="loadPage('single_send.html')">📧 ارسال ایمیل تکی</button>
