--- a/emails_dashboard.html
+++ b/emails_dashboard.html
@@ -68,7 +68,7 @@
     <aside>
       <h2>📧 مدیریت ایمیل‌ها</h2>
       <button onclick="loadPage('email_groups.html')">📂 دسته‌بندی ایمیل‌ها</button>
-      <button onclick="loadPage('sources.html')">📋 منابع ایمیل‌ها</button>
+      <button onclick="loadPage('email_sources.html')">📋 منابع ایمیل‌ها</button>
       <button onclick="loadPage('bulk_send.html')">📤 ارسال ایمیل دسته‌ای</button>
       <button onclick="loadPage('single_send.html')">📧 ارسال ایمیل تکی</button>
       <button onclick="loadPage('templates.html')">🧩 مدیریت قالب‌ها</button>
@@ -86,3 +86,4 @@
   </script>
 </body>
 </html>
+
