--- a/emails_dashboard.html
+++ b/emails_dashboard.html
@@ -71,7 +71,7 @@
       <button onclick="loadPage('email_sources.html')">📋 منابع ایمیل‌ها</button>
       <button onclick="loadPage('emails_bank.html')">📤 ارسال ایمیل دسته‌ای</button>
       <button onclick="loadPage('single_send.html')">📧 ارسال ایمیل تکی</button>
-      <button onclick="loadPage('templates.html')">🧩 مدیریت قالب‌ها</button>
+      <button onclick="loadPage('email_template_editor.html')">🧩 مدیریت قالب‌ها</button>
     </aside>
 
     <main>
@@ -86,5 +86,6 @@
   </script>
 </body>
 </html>
+
 
 
